webview/src/main/components/TopicRow.module.scss
@use './mixins';

.topic-row {
  display: flex;
  align-items: center;
  gap: 6px;
  min-width: 0;
  width: 100%;
  cursor: pointer;

  :global(.semi-badge) {
    flex: none;
    margin-right: 8px;
  }
}

.topic-title {
  flex: 1;
  color: var(--v2ex-main-content-fg);
  @include mixins.ellipsis;
}

